# voyage

./: .gitignore  README.md
Voyage/: README.md
Voyage/Voyage/: ContentView.swift  Info.plist  VoyageApp.swift
Voyage/VoyageTunnel/: Info.plist  PacketTunnelProvider.swift  VoyageTunnel.entitlements
VoyageMac/: README.md
VoyageMac/VoyageMac/: ContentView.swift  Info.plist  MenuBarView.swift  SettingsView.swift  SystemExtensionManager.swift  VPNManager.swift  VoyageMac.entitlements  VoyageMacApp.swift
VoyageMac/VoyageMac/Assets.xcassets/AccentColor.colorset/: Contents.json
VoyageMac/VoyageTunnel/: Info.plist  PacketTunnelProvider.swift  VoyageTunnel.entitlements
voyage-core/: Cargo.toml  README.md  build-apple.sh  build-windows.ps1  build.rs  test.sh
voyage-core/src/: config.rs  connection.rs  device.rs  error.rs  ffi.rs  iface.rs  lib.rs  nat.rs  packet.rs  proxy.rs  rule.rs  socks5.rs  voyage_core.udl
voyage-core/tests/: integration_test.rs
